--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -11,7 +11,7 @@
 \item estimation uncertainty in benchmarks arising from statistical model fitting and time-varying parameters, and
 \item structural uncertainties in model forms.
 \end{itemize}
-\item Uncertainties can also arise in  \textbf{CU statuses}  due to the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). For both aggregate abundance LRPs, uncertainties can arise because CU-level status is based on only a single metric as a proxy for status on multiple dimensions<!--KH: suggest removing the following commented out text as it makes it sounds like the single metric approach comes from the salmon scanner--><!--as implemented in the Salmon Scanner-->. 
+\item Uncertainties can also arise in  \textbf{CU statuses}  due to the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). For both aggregate abundance LRPs, uncertainties can arise because CU-level status is based on only a single metric as a proxy for status on multiple dimensions. 
 \item The distribution of spawning among sub-populations within a CU can be important for the viability of the CU and SMU, and ignoring or misidentifying this stock structure may increase uncertainty in assessed status.
 \item Uncertainties in all the candidate LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. We recommend caution when applying provisional LRPs that do not include all CUs.
 \item Uncertainties in \textbf{logistic regression LRPs} arise from statistical estimation of the stock-recruitment and logistic regression models, as well as changes in population parameters and covariance among CUs over time.
@@ -26,7 +26,6 @@ Uncertainties in CU-level benchmarks affect both proportional and aggregate abun
 
 First, data uncertainties can arise from observation errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and age-at-maturity. These uncertainties impact estimates of recruitment in 'run reconstructions' and assessment of status. 
 
-<!--KH: This following paragraph was part of the above paragraph, but I suggest separating to have one more broad paragraph on one on just hatcheries.  Is this ok?  -->
 In particular, the impact of hatcheries on spawner and recruitment time-series is a key uncertainty due to the low rates of marking hatchery salmon and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatcheries can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], and are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin (or within-population) hatchery facilities as well as those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
 
 
@@ -44,10 +43,10 @@ Third, structural uncertainty in stock-recruitment models underlying benchmark e
 CH: not it's not, but have used 95%CIS to apprpoximate credible intervals for now...
 -->
 
-In addition to uncertainties in benchmarks, uncertainties can arise in estimated CU statuses from their implementation in assessments<!--KH: maybe replace 'from their implemetation in assessments' with 'due to assumptions made during stock assessment'  -->. Uncertainty in status can result from the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). In some cases, status is best represented by a composite of multiple metrics resulting in uncertainties in status when only a single metric (e.g., spawner abundances) is applied. Furthermore, the distribution of spawning among sub-populations within a CU can be important for the viability of the aggregate, and ignoring or misidentifying this stock structure may result in higher uncertainty in assessed status. Uncertainties can also arise from applying stock-recruitment based benchmarks to spatial scales that are larger or smaller than the scale at which density dependence occurs. 
+In addition to uncertainties in benchmarks, uncertainties can arise in estimated CU statuses due to assumptions made during status assessment. Uncertainty in status can result from the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). In some cases, status is best represented by a composite of multiple metrics resulting in uncertainties in status when only a single metric (e.g., spawner abundances) is applied. Furthermore, the distribution of spawning among sub-populations within a CU can be important for the viability of the aggregate, and ignoring or misidentifying this stock structure may result in higher uncertainty in assessed status. Uncertainties can also arise from applying stock-recruitment based benchmarks to spatial scales that are larger or smaller than the scale at which density dependence occurs. 
 
 
-Uncertainties in peer-reviewed WSP assessments are captured qualitatively through narratives associated with each CU assessment [e.g., @dfoWildSalmonPolicy2015] <!--KH: I think this sentence needs to be broken into 2 at this point, but I can't tell how to do it. Do you mean 'these uncertainties are derived from experts while integrating uncertainties in data and estimation ....", or is it the narratives derived from experts?? --> derived from experts integrating uncertainties in data and estimation of benchmarks and reconciling conflicting metrics. This process requires careful consideration of expertise included to ensure that best available information is incorporated in assessments and associated description of uncertainties.  Although uncertainties in CU status derived from the Salmon Scanner are not currently provided, this functionality is being considered for future iterations of the tool. The Salmon Scanner will be applied annually within an expert-driven process led by DFO's State of the Salmon Program, so underlying uncertainties are considered and outputs are verified. A full review of the Salmon Scanner including uncertainties is forthcoming (Pestal et al. in prep).<!--CH comment: There are many uncertainties associated with this tool, but I'm not sure that it's useful for us to include them here as it will invite discussion on topics that are outside scope. Example uncertainties are that the Tool does not include distributional metrics or productivity which may be important in formal WSP assessments, and the Tool was parameterized based on a set of southern stocks so does not necessarily represent the entire range.-->
+Uncertainties in peer-reviewed WSP assessments are captured qualitatively documented in narratives associated with each CU assessment [e.g., @dfoWildSalmonPolicy2015]. These qualitative estimates of uncertainty are derived from experts who integrate uncertainties in data and benchmarks and often reconcile conflicting metrics. This process requires careful consideration of expertise included to ensure that best available information is incorporated in assessments and associated description of uncertainties.  Although uncertainties in CU status derived from the Salmon Scanner are not currently provided, this functionality is being considered for future iterations of the tool. The Salmon Scanner will be applied annually within an expert-driven process led by DFO's State of the Salmon Program, so underlying uncertainties are considered and outputs are verified. A full review of the Salmon Scanner including uncertainties is forthcoming (Pestal et al. in prep).<!--CH comment: There are many uncertainties associated with this tool, but I'm not sure that it's useful for us to include them here as it will invite discussion on topics that are outside scope. Example uncertainties are that the Tool does not include distributional metrics or productivity which may be important in formal WSP assessments, and the Tool was parameterized based on a set of southern stocks so does not necessarily represent the entire range.-->
 
 
 ### Proportional LRPs
@@ -59,8 +58,7 @@ Uncertainties in status derived from proportional LRPs can arise from the exclus
 
 **Logistic regression LRPs**
 
-For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. In our case studies, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both sources. 
-<!--KH: has this next sentace about integration already been implied when we said we did it in sentence 2 of the above paragraph? -->The estimation of the logistic regression model can be statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allows uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.
+For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. In our case studies, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). This occurs because the estimation of the logistic regression model was statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allows uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.  When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both sources. 
 
 Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by the data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity from fisheries among CUs has diverged, or if the covariance in population dynamics has changed due to natural or other anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
@@ -71,7 +69,7 @@ Furthermore, uncertainties in both aggregate abundance LRPs (logistic regression
 For logistic regression LRPs derived from CU assessments that are independent of spawner-recruitment models (e.g, that use habitat-based benchmarks), it is still be possible to integrate uncertainties from the CU assessments to SMU-level LRPs though bootstrapping methods. For example, where CU benchmark estimates are provided with uncertainties, benchmarks can be sampled from those distributions randomly and used to estimate a distribution of LRPs. In preliminary analyses, this approach was applied to the case study for West Coast Vancouver Island Chinook Salmon to derive uncertainty in logistic regression LRPs that accounted for uncertainty in status of component inlets from a watershed-area model. However, because the data did not support the use of logistic regression for that case study, results are not presented, but code to apply this method is available in our repository.
 -->
 
-When considering logistic regression LRPs under alternative model assumptions, such as different formulation of the stock-recruitment model, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Care should be taken when there is little or no overlap in the distribution of LRPs under various model assumptions, where averaging can obscure different plausible realities that would require alternative management actions. <!--CH: this pgh is new. Do I need similar text for projection LRPS? KH: probably a good idea to be consistent ...-->
+
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
@@ -80,10 +78,12 @@ When considering logistic regression LRPs under alternative model assumptions, s
 
 Projection LRPs explicitly account for underlying uncertainties in population and harvest parameters, such as CU-level productivity and capacity, age-structure, covariance in recruitment deviations, and variability in implementation of exploitation strategies over time and among CUs. The inclusion of structural uncertainty in the form of different stock-recruitment relationships is demonstrated for the case study on Interior Fraser Coho. We recommend a thorough review of assumptions and either including them directly in random sampling in projections or including them as sensitivity analyses.
 
-One caveat of this approach is that the LRP depends on the management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. Although management procedures for Pacific salmon often include escapement goals, fixed exploitation limits, and/or a fixed set of exploitation rates that vary with abundances, in practice these procedures<!--omit: salmon are managed through regulations on effort or exploitation rate and not allowable catches, and emergent time-series of exploitation--> can be roughly approximated with a constant exploitation rate with implementation error.<!--KH: suggestion to soften wording on previous statement from "..in practice these procedures ..." to "...we have assumed that these procedures can be roughly approximated ...."--> Other more realistic management procedures could be considered in future iterations.  Projection LRPs derived in this way cannot be used to assess status when management procedures change over time and those changes have not been evaluated in projection. 
+One caveat of this approach is that the LRP depends on the management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. Although management procedures for Pacific salmon often include escapement goals, fixed exploitation limits, and/or a fixed set of exploitation rates that vary with abundances, we have assumed that these procedures<!--omit: salmon are managed through regulations on effort or exploitation rate and not allowable catches, and emergent time-series of exploitation--> can be roughly approximated with a constant exploitation rate with implementation error. Other more realistic management procedures could be considered in future iterations.  Projection LRPs derived in this way cannot be used to assess status when management procedures change over time and those changes have not been evaluated in projection. 
 
 
 One difference between projection and logistic regression LRPs is that for projection LRPs, uncertainties in all underlying parameters and CU-level benchmarks are integrated into the probability of all CUs being above their lower benchmarks, so that the LRP itself does not have statistical uncertainty associated with it. In contrast, 95% CIs associated with logistic regression LRPs account for estimation uncertainty not included in projection LRPs. 
+
+When considering both logistic regression and projection LRPs under alternative model assumptions, such as different formulation of the stock-recruitment model, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Care should be taken when there is little or no overlap in the distribution of LRPs under various model assumptions, where averaging can obscure different plausible realities that would require alternative management actions. 
 
 
 ## IMPACT OF MISSING CUS ON SMU-LEVEL STATUS
@@ -91,39 +91,20 @@ One difference between projection and logistic regression LRPs is that for proje
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item For \textbf{proportional LRPs},  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status. An SMU's status is provisional when data-rich CUs are deemed representative of data-deficient CUs, and data-deficient when they are not. This recommendation is based on the potential for positive biases in estimated status based on the data-rich CUs alone. 
-<!--KH: I made some changes to sentence structure and arrarngement in the above bullet. Is this ok? -->
-\item In contrast, if any component CU has Red status, the proportional LRP of 100\% of CUs above the Red status is considered breached. This recommendation applies regardless of the presence of data-deficient CUs and whether the status data-deficient CUs can be inferred from data-rich CUs.
-<!--KH: I made some changes to sentence structure and arrarngement in the above bullet. Is this ok? -->
-\item For \textbf{aggregate abundance LRPs}, we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can <!--KH: was cannot; changed to can --> be inferred from data-rich CUs, regardless of the status of those data-rich CUs.
-
+\item For \textbf{proportional LRPs} when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status, we recommend SMU status be either provisional or data deficient.
+\begin{itemize}
+\item SMU status is provisional when data-rich CUs are deemed representative of data-deficient CUs
+\item SMU status is data-deficient when data-rich CUs are not representative of data-deficient CUs
+\end{itemize}
+\item Also for \textbf{proportional LRPs}, when any component CU has Red status, we recommend SMU status be assessed as below the LRP regardless of the presence of data-deficient CUs and whether the status data-deficient CUs can be inferred from data-rich CUs.
+\item For \textbf{aggregate abundance LRPs}, we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be inferred from data-rich CUs, regardless of the status of the data-rich CUs.
 \end{itemize}
 \end{tcolorbox}
 
-
-<!--KH:
-
-Here's a slightly revised version of the above grey box for your consideration.  I tried to standardize sentence structure around bullets, and added extra sub-bullets for the first case.  Feel free to only use use pieces of it, or to not use any of it.
-
-\item For \textbf{proportional LRPs} when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status, we recommend SMU status be either provisional or data deficient . This recommendation is based on the potential for positive biases in estimated status based on the data-rich CUs alone. 
-\begin{itemize}
-\item In this case, SMU status is provisional when data-rich CUs are deemed representative of data-deficient CUs
-\item In this case, SMU status is data-deficient when data-rich CUs are not deemed representative of data-deficient CUs
-\end{itemize}
-
-\item For \textbf{proportional LRPs} when any component CU has Red status, we recommend SMU status be assessed as below the LRP regardless of the presence of data-deficient CUs and whether the status data-deficient CUs can be inferred from data-rich CUs.
-
-\item For \textbf{aggregate abundance LRPs}, we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be inferred from data-rich CUs, regardless of the status of those data-rich CUs.
-
-
--->
-
-
-For proportional LRPs,  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status. This recommendation is based on the potential for positive biases in status based on the data-rich CUs alone. <!--KH: same change made as first bullet to break previous sentence into 2  -->  Provisional status can be assigned to SMUs where the data-rich CUs are representative of data-deficient CUs (reflecting high uncertainty in status), and data-deficient SMU status can be assigned where the data-rich CUs are not representative (Table \@ref(tab:GuidanceDDCUs)). The power to detect a breach of a proportional LRP is relatively weak when the sample size of the data-rich CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs within an SMU tend to provide more optimistic status than those that include a larger sample of CUs for proportional LRPs, as shown for Inside South Coast Chum case study. 
+For proportional LRPs,  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status. This recommendation is based on the potential for positive biases in status based on the data-rich CUs alone.  Provisional status can be assigned to SMUs where the data-rich CUs are representative of data-deficient CUs (reflecting high uncertainty in status), and data-deficient SMU status can be assigned where the data-rich CUs are not representative (Table \@ref(tab:GuidanceDDCUs)). The power to detect a breach of a proportional LRP is relatively weak when the sample size of the data-rich CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs within an SMU tend to provide more optimistic status than those that include a larger sample of CUs for proportional LRPs, as shown for Inside South Coast Chum case study. 
 
 
 In contrast, if the LRP of 100% of CUs above Red status has been breached for an SMU with data-deficient CUs, the inclusion of additional CUs may further deplete or improve status defined as the percentage of CUs above Red status, but will not change the fact that the LRP has been breached. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.
-
 
 For aggregate abundance LRPs we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be represented by data-rich CUs regardless of the status of the data-rich CUs. For these LRPs, we found that removing component CUs from assessment of an SMU tended to increase variability in SMU-level status, which may be more pessimistic or optimistic than when all CUs are considered depending on which CU is removed and the level of covariation among CUs.  For logistic regression LRPs in particular, the removal of CUs affects the fit of the logistic regression model, which impacts estimated status relative to LRPs in ways that are difficult to predict *a priori*, as shown for the Interior Fraser Coho case study. In addition, for aggregate abundance LRPs we recommend data-deficient status for SMUs with component data-deficient CUs that cannot be inferred from the data-rich CUs. 
 
@@ -142,8 +123,9 @@ For aggregate abundance LRPs we recommend that SMU status be provisional when SM
 \end{itemize}
 \end{itemize}
 \end{tcolorbox}
-<!--KH: could take this next paragraph as it largely duplicates what is in the box. -->
-We recommend future research on the impacts of temporal trends in underlying population parameters (e.g. productivity), adapting LRPs to include a broader scope for serious harm, and the evaluation of LRP methods given temporal variability in population parameters and other sources of uncertainty, as described in more detail below. We highlight time-varying parameters due to their pervasiveness in Pacific salmon population dynamics and documented impacts on reference points.
+
+
+We recommend future research on the impacts of time-varying parameters, adapting LRPs to include a broader scope for serious harm, and the evaluation of LRP methods, as described in more detail below. We highlight time-varying parameters due to their pervasiveness in Pacific salmon population dynamics and documented impacts on reference points.
 
 ### TIME-VARYING PARAMETERS AND IMPACTS ON LRPS
 
@@ -155,7 +137,7 @@ Although evidence for time-varying population processes is strong, guidance on i
 
 Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to biases in stock status and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every CU where trends are suspected due to limited resources. 
 
-Further research identifying when and how to account for time-varying parameters in assessments and management of Pacific salmon is warranted, and is currently underway within DFO. Guidance on accounting for time-varying parameters that differ among CUs within an SMU is also warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs<!--LW comment: remove 'based'?--> will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when <!--KH: changed following from previous 'consistent reductions in productivity'--> a consistently lower productivity level was introduced through an alternative stock recruitment model formulation (one that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks increased <!--KH: Was previously declined, but should be increased --> for most CUs as did the aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
+Further research identifying when and how to account for time-varying parameters in assessments and management of Pacific salmon is warranted, and is currently underway within DFO. Guidance on accounting for time-varying parameters that differ among CUs within an SMU is also warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance and proportion LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when a consistently lower productivity level was introduced through an alternative stock recruitment model formulation (one that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks increased for most CUs as did the aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
 
 
 ### ADAPTING LRPS TO INCLUDE A BROADER SCOPE OF SERIOUS HARM
